--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
 body{
   width: 100vw;
   min-height: 100vh;
-  overflow-x: hidden
+  overflow-x: hidden;
+  position: relative;
 }
 
 /* .productgrid:nth-child(even) {
